Remove margin from first-child to avoid extra whitespace at top of page

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
  Author URI:   http://ingersollrentall.com
  Template:     onepress
 
- Version:      1.0.45.16
+ Version:      1.0.45.17
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 */
@@ -42,6 +42,10 @@
 ul.columns-1 li.product {
   width: 100% !important;
   margin: 30px 0 0 !important;
+}
+
+ul.columns-1 li.product:first-child {
+    margin: 0 !important; // Remove margin from first-child to avoid extra whitespace at top of page
 }
 
 ul.products.subcategory-products {
